update chat app page

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
+    <title>chatapp</title>
 </head>
 
 <body>
     <header class="pt-25 menu">
         <div class="container z-10 w-100 ">
 
-            <nav class="d-flex align-items-center justify-content-between mt-17">
+            <nav class="d-flex align-items-center justify-content-between ">
                 <h2 class="logo"> chat <span>app</span></h2>
                 <input type="checkbox" id="menuIcon" hidden>
                 <label for="menuIcon">
@@ -21,7 +21,7 @@
                     <span></span>
                 </label>
 
-                <ul class="d-flex  gap-30 smallscreen">
+                <ul class="d-flex  gap-30 smallscreen pb-24 ">
 
                     <li class="icons"> <a href="" class="icons"> Product</a></li>
 
@@ -146,8 +146,8 @@
                             <div class=" mb-24 col-6 col-sm-4 col-md-3">
                                 <ul class="flex-column">
                                     <li class="help">Contact Us</li>
-                                    <li class="pb-12"><a href="" class="info">info@chatapp.com</a></li>
-                                    <li class="pb-12"><a href="" class="info">1-800-200-300</a></li>
+                                    <li class="pb-12"><a href="mailto:info@chatapp.com" class="info">info@chatapp.com </a></li>
+                                    <li class="pb-12"><a href="tel:1-800-200-300" class="info">1-800-200-300 </a></li>
                                     <li class="pb-12"><a href="" class="info">3500 Deer Creek Rd
                                             Palo Alto, CA</a></li>
 
